Fix: header logo stretching preview sidebar

--- a/assets/css/settings-styles.css
+++ b/assets/css/settings-styles.css
@@ -87,6 +87,7 @@ img.wpo-helper {
 #img-header_logo {
 	max-height: 200px;
 	width: auto;
+	max-width: 100%;
 }
 
 .multiple-text-input label {
